--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
-    "@ng-bootstrap/ng-bootstrap": "^2.0.0",
     "add": "^2.0.6",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "ngx-google-places-autocomplete": "^2.0.1",
     "ngx-toastr": "^8.4.0",
+    "npm": "^6.2.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
